--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,6 @@
+# Production Environment Variables
+# This file is safe to commit (no secrets)
+
 REACT_APP_API_URL=https://growfun-backend.onrender.com/api
 REACT_APP_STRIPE_PUBLIC_KEY=pk_test_your_key
 REACT_APP_PAYPAL_CLIENT_ID=your_paypal_id
